--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,7 @@
             <a class="dropdown-item" href="{% url 'maps:map' %}">Ubicación</a>
             <a class="dropdown-item" href="{% url 'gallery:gallery_display' %}">Galeria</a>
             <a class="dropdown-item" href="{% url 'calendar:calendar' %}">Calendario</a>
+             <a class="dropdown-item" href="{% url 'personal:instructor_list' %}">Instructores</a>
             <!-- Add more options as needed -->
           </div>
         </li>
