--- a/Gym/templates/contacto.html
+++ b/Gym/templates/contacto.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Contact Us</h1>
-    <form method="POST" action="{% url 'contact' %}">
+    <form method="POST" action="{% url 'contacto' %}">
         {% csrf_token %}
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" required><br><br>
