--- a/reports/templates/reports.html
+++ b/reports/templates/reports.html
@@ -1,7 +1,19 @@
 {% extends 'base.html' %}
+{% load static %}
+
+
 {% load tags %}
 
 {% block content %}
+{% block main_block %}
+        <!-- Add your main block content here -->
+        <div class="mt-5">
+            <!-- Main Content -->
+
+            <div class="my-5">
+                <br>
+                <h1>Reportes</h1>
+            </div>
 <!-- <a href="{% url 'export_all' %}">Export all users</a> -->
 <form method="POST" action="{% url 'reports' %}" style="margin-top: 3%; margin-bottom: 3%">
     {% csrf_token %}
@@ -76,3 +88,8 @@
     </div>
 {% endif %}
 {% endblock %}
+{% endblock %}
+
+
+
+
