--- a/schedules/templates/schedules/schedule_list.html
+++ b/schedules/templates/schedules/schedule_list.html
@@ -1,30 +1,57 @@
-<h1>Schedules</h1>
+{% extends 'base.html' %}
+{% load static %}
 
-<table border="1">
+{% block content %}
+{% block main_block %}
+    <div class="container">
+        <!-- Add your main block content here -->
+        <div class="mt-5">
+            <!-- Main Content -->
+<br>
+<h1>Programa</h1>
+
+<style>
+    table {
+        border-collapse: collapse;
+        width: 100%;
+    }
+    th, td {
+        border: 1px solid black;
+        padding: 8px;
+        text-align: left;
+    }
+    th {
+        background-color: #f2f2f2;
+    }
+    tr:hover {
+        background-color: #f5f5f5;
+    }
+</style>
+
+<table>
 <thead>
     <tr>
-    <th>Name</th>
-    <th>instructor</th>
-    <th>start_date</th>
-    <th>end_date</th>
-    <th>start_time</th>
-    <th>end_time</th>
-    <th>View</th>
-    <th>Edit</th>
-    <th>Delete</th>
+        <th>Name</th>
+        <th>Instructor</th>
+        <th>Start Date</th>
+        <th>End Date</th>
+        <th>Start Time</th>
+        <th>End Time</th>
     </tr>
 </thead>
 <tbody>
     {% for schedule in object_list %}
     <tr>
-    <td>{{ schedule.name }}</td>
-    <td>{{ schedule.pages }}</td>
-    <td><a href="{% url "schedule_view" schedule.id %}">view</a></td>
-    <td><a href="{% url "schedule_edit" schedule.id %}">edit</a></td>
-    <td><a href="{% url "schedule_delete" schedule.id %}">delete</a></td>
+        <td>{{ schedule.name }}</td>
+        <td>{{ schedule.instructor }}</td>
+        <td>{{ schedule.start_date }}</td>
+        <td>{{ schedule.end_date }}</td>
+        <td>{{ schedule.start_time }}</td>
+        <td>{{ schedule.end_time }}</td>
     </tr>
     {% endfor %}
 </tbody>
 </table>
 
-<a href="{% url "schedule_new" %}">New</a>
+{% endblock %}
+{% endblock %}
