--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,8 @@
             <a class="dropdown-item" href="{% url 'gallery:gallery_display' %}">Galeria</a>
             <a class="dropdown-item" href="{% url 'calendar:calendar' %}">Calendario</a>
              <a class="dropdown-item" href="{% url 'personal:instructor_list' %}">Instructores</a>
-            <!-- Add more options as needed -->
+              <a class="dropdown-item" href="{% url 'schedule:schedule_list' %}">Programas</a>
+            <a class="dropdown-item" href="{% url 'contact_list' %}">Contacto</a>
           </div>
         </li>
       </ul>
