--- a/accounts/templates/change_password.html
+++ b/accounts/templates/change_password.html
@@ -1,12 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load tags %}
-
-{% block title %}
-    PowerPack
-{% endblock %}
-
 {% block content %}
+{% block main_block %}
   {% if messages %}
     {% for message in messages %}
       <div class="alert {% if message.tags %} alert-{{ message.tags }}{% endif %}" style="margin-top: 3%; margin-bottom: 3%">{{ message|safe }}</div>
@@ -49,4 +45,5 @@
     </div>
    </div>
 </form>
+{% endblock %}
 {% endblock %}
