--- a/accounts/templates/homepage_after_login.html
+++ b/accounts/templates/homepage_after_login.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
+{% load tags %}
 {% load static %}
 
-{% block title %}
-    PowerPack
-{% endblock %}
-
-{% block without_container %}
+{% block content %}
+{% block main_block %}
 <div class="container-fluid" id="homepage_after_login" style="padding: 0; height: 90%">
   {% if wallpaper.photo %}
   <img src="{{ wallpaper.photo }}" class="img-fluid">
@@ -13,4 +11,5 @@
   <img src="{% static 'images/after_login.jpg' %}" class="img-fluid" alt="">
   {% endif %}
 </div>
+{% endblock %}
 {% endblock %}
