--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,17 +1,16 @@
 {% extends 'base.html' %}
 {% load tags %}
-
-{% block title %}
-    Login
-{% endblock %}
+{% load static %}
 
 {% block content %}
+{% block main_block %}
 {% if form.non_field_errors %}
     {% for error in form.non_field_errors %}
         <div class="col-lg-6 col-md-6 offset-lg-3 offset-md-3 col-sm-12 col-xs-12 alert alert-danger" style="margin-top: 3%; margin-bottom: 3%">{{ error }}</div>
     {% endfor %}
 {% endif %}
   <div class="col-lg-6 col-md-6 offset-lg-3 offset-md-3 col-sm-12 col-xs-12" style="margin-top: 3%; margin-bottom: 3%">
+      <br>
       <h2>Login</h2>
       <form method="post" class="form" action="{% url 'login' %}">
         {% csrf_token %}
@@ -30,4 +29,5 @@
         <button class="btn btn-default" type="submit">Login</button>
       </form>
   </div>
+{% endblock %}
 {% endblock %}
