--- a/notifications/templates/notifications.html
+++ b/notifications/templates/notifications.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% load index %}
+{% load static %}
 
 {% block content %}
+{% block main_block %}
     <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist" style="margin-top: 3%">
       <li class="nav-item">
         <a class="nav-link active" id="home-tab" data-toggle="tab" href="#morning" role="tab" aria-controls="home" aria-selected="true">Morning</a>
@@ -168,7 +170,7 @@
             </thead>
             <tbody class="text-center">
                 {% for member in evening_members_before %}
-                    <tr>	
+                    <tr>
 				  <td><img src="{% if member.photo %}{{ member.photo.url }}{% else %}/media/default.jpg{% endif %}" class="img-fluid" width="100" height="100"></td>
                         <td>{{ member.first_name }} {{ member.last_name }}</td>
                         <td>{{ member.dob }}</td>
@@ -210,4 +212,5 @@
       }
   });
   </script>
+{% endblock %}
 {% endblock %}
