--- a/membershipform/templates/membershipform/solicitud_error.html
+++ b/membershipform/templates/membershipform/solicitud_error.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
+{% block main_block %}
   <h1>Error en la solicitud de membresía</h1>
   <p>Hubo un error al procesar tu solicitud de membresía. Por favor, inténtalo nuevamente más tarde.</p>
+{% endblock %}
 {% endblock %}
