--- a/membershipform/templates/membershipform/solicitud_exitosa.html
+++ b/membershipform/templates/membershipform/solicitud_exitosa.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
+{% block main_block %}
   <h1>Solicitud de membresía exitosa</h1>
   <p>Tu solicitud de membresía ha sido enviada exitosamente.</p>
+{% endblock %}
 {% endblock %}
