--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,8 @@
             <a class="dropdown-item" href="{% url 'personal:instructor_list' %}">Instructores</a>
             <a class="dropdown-item" href="{% url 'schedule:schedule_list' %}">Programas</a>
             <a class="dropdown-item" href="{% url 'contact_list' %}">Contacto</a>
+              <a class="dropdown-item" href="{% url 'calculatorIMC:calculate_bmi' %}">Calculadora IMC</a>
+              <a class="dropdown-item" href="{% url 'videos:galeria_videos' %}">Videos</a>
           </div>
         </li>
         <!-- Add Login button -->
