--- a/videos/templates/videos/galeria_videos.html
+++ b/videos/templates/videos/galeria_videos.html
@@ -1,16 +1,42 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Galería de Videos</title>
-</head>
-<body>
-    <h1>Galería de Videos</h1>
+{% extends 'base.html' %}
+{% load static %}
+{% load embed_video_tags %}
 
-    {% for video in videos %}
-        <div>
-            <h2>{{ video.titulo }}</h2>
-            <iframe width="560" height="315" src="{{ video.url }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+{% block content %}
+    {% block main_block %}
+        <div class="container">
+            <div class="mt-5">
+              <br><br>
+                <h1>Videos</h1>
+            </div>
+
+            <div id="videoCarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    {% for video in videos %}
+                        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                            <div class="video-item text-center">
+                                <h2>{{ video.titulo }}</h2>
+                                {% video video.url 'large' %}
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+
+                <a class="carousel-control-prev" href="#videoCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#videoCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+            <div class="text-center mt-3">
+                <a class="btn btn-primary" href="#videoCarousel" role="button" data-slide="prev">Previous</a>
+                <a class="btn btn-primary" href="#videoCarousel" role="button" data-slide="next">Next</a>
+            </div>
+
         </div>
-    {% endfor %}
-</body>
-</html>
+    {% endblock %}
+{% endblock %}
